fixed: Learning path enrolled data is not showing in the dashboard (#757)

--- a/src/templates/standard/components/NavBar/NavBar.module.scss
+++ b/src/templates/standard/components/NavBar/NavBar.module.scss
@@ -206,6 +206,8 @@
     align-items: center;
     justify-content: space-between;
     .navTitle {
+      color: var(--font-secondary);
+
       font-size: 12px;
     }
 
